--- a/ClaseIndex/css/style.css
+++ b/ClaseIndex/css/style.css
@@ -1,6 +1,6 @@
 body
 {
-    color: whitesmoke;
+    color: rgb(255, 255, 255);
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
     font-size: 20px;
@@ -20,6 +20,15 @@ body
 {
     background: rgb(236, 229, 229);
     color: rgb(5, 5, 5);
+}
+
+#cuerpo
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: aliceblue;
+    color: black;
 }
 
 #texto1
