--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -1,7 +1,7 @@
 body
 {
     color: rgb(253, 253, 253);
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Times New Roman';
     font-size: medium;
     margin: 5%;
     padding: 0px;
