--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -38,7 +38,7 @@ body
 .nav a
 {
     background-color: rgb(194, 7, 178);
-    color: azure;
+    color: white;
     padding: 5px;
     border-radius: 2px;
     text-decoration: none;
