--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -154,11 +154,18 @@ body
 
 .footer
 {
-    display: flex;
-    background-color: black;
-    color: blanchedalmond;
-    width: 100vw;
-    margin-bottom: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background: #000000;
+  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
+  color: rgb(252, 252, 252);
+  font-weight: bold;
+  margin: 0;
+  padding: 0.5em;
+  width: 100vw;
+  margin: 0 auto;
 }
 
 .footer img
