--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -9,6 +9,10 @@ body
 {
     color: rgb(27, 201, 4);
     font-family: 'Times New Roman';
+    width: 100vw;
+    height: 100vh; 
+    background-size: cover;
+    background-repeat: no-repeat;  
            
 }
 
@@ -152,6 +156,12 @@ body
     height: 6vw;
 }
 
+.footer img
+{
+    width: 4vw;
+    height: 4vh;
+}
+
 .footer
 {
   display: flex;
@@ -165,14 +175,10 @@ body
   margin: 0;
   padding: 0.5em;
   width: 100vw;
-  margin: 0 auto;
+  
 }
 
-.footer img
-{
-    width: 4vw;
-    height: 4vh;
-}
+
 
 
 
