--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -9,9 +9,7 @@ body
 {
     color: rgb(27, 201, 4);
     font-family: 'Times New Roman';
-    width: 100vw;
-    height: 100vh; 
-    background-size: cover;
+    background-size: 100vw 100vh;
     background-repeat: no-repeat;  
            
 }
