--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -10,8 +10,12 @@ body
     color: rgb(27, 201, 4);
     font-family: 'Times New Roman';
     background-size: 100vw 100vh;
-    background-repeat: no-repeat;  
-           
+    background-repeat: no-repeat;            
+}
+
+main
+{
+    height: 60vh;
 }
 
 .header
@@ -85,16 +89,28 @@ body
 .body
 {
     display: flex;
+    flex-direction: column;
     padding: 00.3em;
-    width: 100vw;
-     
+    width: 100vw;     
+}
+
+.section1
+{
+   display: flex;
+   flex-direction: row;
+}
+
+.section2
+{
+    display: flex;
+    flex-direction: row;
 }
 
 .play
 {
     display: flex;
     justify-content: center;
-    margin: 00.25em;
+    margin: 00.3em;
     padding: 0.5em;    
 }
 
@@ -115,7 +131,7 @@ body
     
         display: flex;
         justify-content: center;
-        margin: 00.25em;
+        margin: 00.3em;
         padding: 0.5em;    
     
 }
@@ -134,9 +150,9 @@ body
     
 .motorcycle
 {
-    
+    display: flex;
     justify-content: center;
-    margin: 00.25em;
+    margin: 00.3em;
     padding: 0.5em;  
 
 }
@@ -152,6 +168,21 @@ body
     float: left;    
     width: 15vw;
     height: 6vw;
+}
+
+.tecnology
+{
+    display: flex;
+    justify-content: center;
+    margin: 00.3em;
+    padding: 0.5em;    
+}
+
+.tecnology-img
+{
+    float: right;    
+    width: 10vw;
+    height: 8vw;
 }
 
 .footer img
