--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -9,29 +9,27 @@ body
 {
     color: rgb(27, 201, 4);
     font-family: 'Times New Roman';
-    background-size: 100vw 100vh;
-    background-repeat: no-repeat;            
-}
-
-main
-{
-    height: 66vh;
+    background-size:100vw 100vh;
+    background-repeat: no-repeat;
+                  
 }
 
 .header
 {
-    margin-top: 25px;
+    
     width: 100vw;
-    display: flex;
-    justify-content: space-between;    
+    display: flex;     
     background-color: rgb(9, 20, 180); 
     height: 10vh;  
-    padding: 0.5rem;       
+    padding: 0.3rem; 
+    margin-bottom: 2vh;      
 }
 
 .header img
 {
-    width: 5.5vw;        
+    width: 5.5vw;
+    margin-right: 20px;
+    border-radius: 50%;        
 }
 
 .header span
@@ -46,7 +44,9 @@ main
 {
     display: flex;
     flex-direction: row;
-    align-items: flex-end;        
+    flex-wrap: wrap;
+    align-items: flex-end;
+    margin-left: auto;        
 }
 
 .header-container-nav li
@@ -64,9 +64,9 @@ main
     text-decoration: none;               
 }
 
-.header-container-nav a:hover
+.header-container-nav li:hover
 {
-    color: black;
+    background-color: rgba(194, 7, 178, 0.76);
 }
 
 .header-container-nav li:active
@@ -76,8 +76,22 @@ main
 
 .user-register
 {
-    color: rgb(255, 123, 0);
-    padding: 0.25em;        
+    display: flex;    
+    flex-wrap: wrap;      
+    color: rgb(255, 123, 0);    
+    padding: 0.25em;
+    margin-bottom: 1.5vh;             
+}
+
+.user-register label
+{
+    display: inline-block; 
+    margin-left: auto;       
+}
+
+.button
+{
+    margin-left: auto;
 }
 
 .button:hover
@@ -88,29 +102,41 @@ main
 
 .present
 {
-    display: flex;
-    color: rgb(0, 238, 214);    
+    display: flex;    
+    color: rgb(0, 238, 214);          
 }
 
+.present h3
+{
+    margin-right: 20px;
+}
 
-.body
+main
+{
+  
+
+}
+
+.principal-body
 {
     display: flex;
     flex-direction: column;
     padding: 00.3em;
-    width: 100vw;     
+    width: 100vw;        
 }
 
 .section1
 {
    display: flex;
-   flex-direction: row;
+   flex-direction: row;  
+   justify-content: space-around;
 }
 
 .section2
 {
     display: flex;
-    flex-direction: row;
+    flex-direction: row;    
+    justify-content: space-around;
 }
 
 .play
@@ -135,12 +161,10 @@ main
 
 .whiteline 
 {
-    
-        display: flex;
-        justify-content: center;
-        margin: 00.3em;
-        padding: 0.5em;    
-    
+    display: flex;
+    justify-content: center;
+    margin: 00.3em;
+    padding: 0.5em;    
 }
 
 .whiteline ul a
@@ -151,17 +175,16 @@ main
 .whiteline-img
 {
     float: right;    
-    width: 5vw;
-    height: 10vw;
+    width: 10vw;
+    height: 9.0vw;
 }
     
 .motorcycle
 {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     margin: 00.3em;
-    padding: 0.5em;  
-
+    padding: 0.5em;    
 }
 
 .motorcycle ul a
@@ -172,9 +195,9 @@ main
 
 .motorcycle-img
 {
-    float: left;    
-    width: 15vw;
-    height: 6vw;
+    float: right;    
+    width: 10vw;
+    height: 9.0vw;
 }
 
 .tecnology
@@ -189,32 +212,30 @@ main
 {
     float: right;    
     width: 10vw;
-    height: 8vw;
+    height: 9.0vw;
 }
 
-.footer img
+footer img
 {
     width: 4vw;
     height: 4vh;
 }
 
-.footer
+footer
 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background: #000000;
-  box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.5);
-  color: rgb(252, 252, 252);
-  font-weight: bold;
-  margin: 0;
+  display: flex; 
+  flex-wrap: wrap;
+  background: #000000;  
+  color: rgb(252, 252, 252);   
   padding: 0.5em;
   width: 100vw;
-  
+ 
 }
 
-
+footer p
+{
+   display: inline-block;   
+}
 
 
 
