--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -62,7 +62,7 @@ body
   padding: 3px; 
   border: solid 1px rgb(194, 7, 178);
   text-align: center;
-  font-size: 1vw; 
+  font-size: 1.1vw; 
 }
 
 .header-container-nav  a
@@ -241,9 +241,9 @@ body
 .motorcycle
 {
     display: flex;
-    align-items: center; 
-    text-align: center;  
-    padding: 1rem;
+    justify-content: center;
+    text-align: center;   
+    padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
      box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -311,8 +311,8 @@ body
 {
     float: right;    
     width: 10vw;
-    height: 12vh;
-    border-radius: 10px;
+    height: 11vh;
+    border-radius: 12px;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
      box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
