--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -13,10 +13,10 @@ body
     font-family: 'Times New Roman';
     width: 100vw;
     height: 100vh; 
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
     justify-content: space-between;
-    background-position: center;
+    background-position: center;    
 }
 
 .header
