--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -159,7 +159,7 @@ body
 .play
 {
     display: flex;
-    justify-content: center;
+    align-items: center;
     text-align: center;   
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -241,7 +241,7 @@ body
 .motorcycle
 {
     display: flex;
-    justify-content: center;
+    align-items: center;
     text-align: center;   
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
@@ -310,8 +310,8 @@ body
 .tecnology-img
 {
     float: right;    
-    width: 10vw;
-    height: 11vh;
+    width: 8vw;
+    height: 10vh;
     border-radius: 12px;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
