--- a/Paginafinal/css/style.css
+++ b/Paginafinal/css/style.css
@@ -9,7 +9,8 @@ body
 {
     display: flex;
     flex-flow: column;
-    color: rgb(27, 201, 4);
+    background-image: url('https://i.postimg.cc/RF93HwJS/prueba1jpg.jpg');
+    color: rgb(255, 255, 255);
     font-family: 'Times New Roman';
     width: 100vw;
     height: 100vh; 
@@ -86,7 +87,7 @@ body
 {
     display: flex;    
     flex-wrap: wrap;      
-    color: rgb(255, 123, 0);    
+    color: rgb(10, 226, 21);    
     padding: 0.25em;
     margin-bottom: 1.5vh;             
 }
@@ -113,25 +114,20 @@ body
 .present
 {
     display: flex;    
-    color: rgb(0, 238, 214);          
+    color: rgb(255, 199, 250);          
 }
 
 .present h3
 {
     margin-right: 20px;
-    font-size: 2vw;
+    font-size: 2.5vw;
 }
-
-/* main
-{
-    margin-top: auto;
-    margin-bottom: auto;
-} */
 
 .principal-body
 {
     
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     padding: 00.3em;
@@ -139,34 +135,54 @@ body
     height: inherit;         
 }
 
-/* .section1
+.section1
 {
    display: flex;
-   flex-direction: row;  
+   flex-direction: row; 
+   flex-wrap: wrap; 
    justify-content: space-around;
    margin-bottom: 20px;
    margin-top: 20px;
+   width: 100vw;
 }
 
 .section2
 {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;    
     justify-content: space-around;
     margin-bottom: 20px;
-} */
+    width: 100vw;
+}
 
 .play
 {
     display: flex;
     justify-content: center;
-    text-align: center;   
+    text-align: center; 
+    align-items: center;      
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     border-radius: 20px;  
-      
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 20rem;     
+}
+
+.play:hover
+{
+    display: flex;
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
+    padding: 0.5em;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 30rem;
+    height: 10rem;   
 }
 
 .play ul
@@ -182,8 +198,7 @@ body
 
 .play ul a
 {
-    color: rgb(255, 123, 0);
-        
+    color: rgb(173, 231, 183);
 }
 
 .play-img
@@ -192,29 +207,40 @@ body
     width: 10vw;
     height: 9.0vw;
     border-radius: 50px;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     
 }
 
 .whiteline 
 {
     display: flex;
-    align-items: center; 
-    text-align: center;   
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     border-radius: 20px;
-     
-         
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 20rem;     
+}
+
+.whiteline:hover
+{
+    display: flex;
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
+    padding: 0.5em;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 30rem;
+    height: 10rem;   
 }
 
 .whiteline ul a
 {
-    color: rgb(255, 123, 0);
+    color: rgb(173, 231, 183);
 }
 
 .whiteline ul
@@ -232,27 +258,41 @@ body
 {
     float: right;    
     width: 5vw;
-    height: 10vw;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);    
+    height: 9vw;
 }
     
 .motorcycle
 {
     display: flex;
     justify-content: center;
-    text-align: center;   
+    text-align: center; 
+    align-items: center;      
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     border-radius: 20px;    
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 20rem;     
+}
+
+.motorcycle:hover
+{
+    display: flex;
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
+    padding: 0.5em;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 30rem;
+    height: 10rem;   
 }
 
 .motorcycle ul a
 {
-    color: rgb(255, 123, 0);
+    color: rgb(173, 231, 183);
 }
 
 .motorcycle ul
@@ -271,30 +311,42 @@ body
 {
     float: right; 
     border-radius: 20px;     
-    width: 14vw;
-    height: 7vw;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-
+    width: 25vw;
+    height: 15vw;
 }
 
 .tecnology
 {
     display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 00.3em;
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
     padding: 0.5em;
     -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     border-radius: 20px;    
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 20rem;     
+}
+
+.tecnology:hover
+{
+    display: flex;
+    justify-content: center;
+    text-align: center; 
+    align-items: center;      
+    padding: 0.5em;
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 20px;  
+    width: 30rem;
+    height: 10rem;   
 }
 
 .tecnology ul a
 {
-    color: rgb(255, 123, 0);    
+    color: rgb(173, 231, 183);   
 }
 
 .tecnology ul
@@ -310,13 +362,9 @@ body
 .tecnology-img
 {
     float: right;    
-    width: 10vw;
-    height: 11vh;
+    width: 15vw;
+    height: 10vh;
     border-radius: 12px;
-    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
-
 }
 
 footer
